[Project Description] Another round of edits

--- a/Project Description/Latex/Klingon Morphological Analyzer - Project Description - Matthew Thomas.tex
+++ b/Project Description/Latex/Klingon Morphological Analyzer - Project Description - Matthew Thomas.tex
@@ -183,7 +183,7 @@ After all suffixes are appended, one of three options are chosen for the noun ta
 
 Verb can take both prefixes and suffixes. Prefixes specify both the subject and object of the verb, including whether or not a subject and/or object exists. Verbs can use either the \textbf{Indicative mood} or the \textbf{Imperative mood}, which can also affect whether some suffixes can be used. There is no infinite form of a verb in Klingon.
 
-Verbs are categorized into \textbf{stative} and \textbf{dynamic}. Klingon does not use adjectives so stative verbs are used to describe nouns. For example to say ``red ship'', one would use the stative verb Doq meaning to be red/orange, ``\textit{Duj Doq}''.
+Verbs are categorized into \textbf{stative} and \textbf{dynamic}. Klingon does not use adjectives so stative verbs are used instead to describe nouns. For example to say ``red ship'', one would use the stative verb Doq meaning to be red/orange, ``\textit{Duj Doq}''.
 
 Verbs conform to nine ordered suffix types. Just like nouns, each suffix type, if present, must be appended to the verb stem in a specific order. There can be no more than one suffix per type.
 
@@ -199,7 +199,7 @@ Finally the verb type (dynamic vs stative) is tracked using the VERBTYPE flag.
 
 \textbf{Rover Suffixes}
 
-In addition, a ``rover'' suffix type can be appended immediately after the verb stem or between the nine suffix types, however rover suffixes cannot be appended after a Type 9 suffix. There are no restrictions on the number of rover suffixes that may be used. A rover suffix modifies whatever directly immediately precedes it. For example the \textbf{negating} rover suffix \textit{be'} can be appended immediately after the verb stem and/or after any other suffix type.
+The ``rover'' suffix type can be appended immediately after the verb stem or between each of the nine suffix types, however rover suffixes cannot be appended after a Type 9 suffix. There are no restrictions on the number of rover suffixes that may be used. A rover suffix modifies whatever immediately precedes it. For example the \textbf{negating} rover suffix \textit{be'} can be appended immediately after the verb stem and/or after any other suffix type.
 
 	\begin{table}[h]
 	\begin{center}
